# emb_fs_util

./: CMakeLists.txt
lfs_flash/: lfs_int_w25q16jv.cpp  lfs_int_w25q16jv.hpp
lfs_util/: lfs_file_move.c  lfs_file_move.h  lfs_int.cpp  lfs_int.hpp
spi_flash/: W25Q16JV.cpp  W25Q16JV.hpp
spiffs_flash/: spiffs_int_w25q16jv.cpp  spiffs_int_w25q16jv.hpp
spiffs_util/: spiffs_int.cpp  spiffs_int.hpp
